[package]
name = "rust-libp2p"
version = "0.1.0"
edition = "2024"

[dependencies]
futures = "0.3.31"
libp2p = { version = "0.55.0", features = ["noise", "ping", "tcp", "tokio", "yamux"] }
tokio = { version = "1.44.2", features = ["full"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

